...
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="uBy-Hy-GOa"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Timer" id="TGl-wy-awX" userLabel="Timer"/>
                    <connections>
                        <outlet property="timerLabel" destination="xGD-q1-Y0j" id="4jK-12-uM4"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Mx1-Cd-RKT" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                                <connections>
                                    <segue destination="1kT-DG-78I" kind="show" identifier="Show Solve" id="uxk-wR-Lbc"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="SolveTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="UpE-jH-oL4" id="xOb-zK-kYJ"/>
                            <outlet property="delegate" destination="UpE-jH-oL4" id="udj-wv-KAc"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Solves" id="bkH-K8-2Yf"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ZpA-3b-7g4" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="9" y="1320"/>
        </scene>
        <!--Solve-->
...
